finally figured out how to make the scala dependency easy.
using a plugin that does nothing, but includes the scala classes inside of it, and listing it as a dependency in all my other scala plugins.
using lein to make the uberjar for this.